--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		</div>
 		<div class="register__form">
 			<input type="text" class="register__name" placeholder="NAME">
-			<input type="text" class="register__password" placeholder="PASSWORD">
-			<input type="text" class="register__email" placeholder="EMAIL">
-			<button class="btn-login">SUBMIT</button>
+			<input type="text" class="register__password"  id="password" placeholder="PASSWORD">
+			<input type="text" class="register__email" id="email" placeholder="EMAIL">
+			<button class="btn-login" id="button">SUBMIT</button>
 		</div>
 	</section>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
