defined all the redirects for login, sign out and registered and made it functional

--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
 
 	<section class="register">
 		<div class="register__title">
-			<h1>LOGIN<span>SIGNUP</span></h1>
+			<h1><a href="login.html">LOGIN</a><span>SIGNUP</span></h1>
 		</div>
 		<div class="register__choice">
 			<button class="selected">USER</button>
